fix contact section on tablet view

--- a/queries.css
+++ b/queries.css
@@ -32,4 +32,13 @@
         grid-template-columns: 1fr 1fr;
         grid-gap: 2rem;
     }
+
+    .contact-section .contact-container {
+        grid-template-columns: 1fr;
+        grid-row-gap: 50px;
+    }
+
+    .contact-section .contact-form {
+        max-width: 100%;
+    }
 }
